@startuml

title __COURSESCHEDULER's Class Diagram__\n

  namespace com.company {
    class com.company.CourseSchedulerMain {
    }
  }
  

  namespace com.company {
    namespace comparators {
      class com.company.comparators.CourseComparator {
      }
    }
  }
  

  namespace com.company {
    namespace comparators {
      class com.company.comparators.FirstMidLastNameComparator {
      }
    }
  }
  

  namespace com.company {
    namespace comparators {
      class com.company.comparators.LastMidFirstNameComparator {
      }
    }
  }
  

  namespace com.company {
    namespace comparators {
      class com.company.comparators.SessionComparator {
      }
    }
  }
  

  namespace com.company {
    namespace data.course {
      class com.company.data.course.Course {
      }
    }
  }
  

  namespace com.company {
    namespace data.course {
      class com.company.data.course.CourseDirectory {
      }
    }
  }
  

  namespace com.company {
    namespace data.course {
      class com.company.data.course.Session {
      }
    }
  }
  

  namespace com.company {
    namespace data.person {
      class com.company.data.person.Faculty {
      }
    }
  }
  

  namespace com.company {
    namespace data.person {
      abstract class com.company.data.person.Person {
      }
    }
  }
  

  namespace com.company {
    namespace data.person {
      class com.company.data.person.PersonAddress {
      }
    }
  }
  

  namespace com.company {
    namespace data.person {
      class com.company.data.person.PersonDirectory {
      }
    }
  }
  

  namespace com.company {
    namespace data.person {
      class com.company.data.person.PersonName {
      }
    }
  }
  

  namespace com.company {
    namespace data.person {
      class com.company.data.person.Student {
      }
    }
  }
  

  com.company.comparators.CourseComparator .up.|> java.util.Comparator
  com.company.comparators.FirstMidLastNameComparator .up.|> java.util.Comparator
  com.company.comparators.LastMidFirstNameComparator .up.|> java.util.Comparator
  com.company.comparators.SessionComparator .up.|> java.util.Comparator
  com.company.data.course.Course .up.|> java.lang.Comparable
  com.company.data.course.Session .up.|> java.lang.Comparable
  com.company.data.course.Session o-- com.company.data.person.Faculty : teacher
  com.company.data.person.Faculty -up-|> com.company.data.person.Person
  com.company.data.person.Person .up.|> java.io.Serializable
  com.company.data.person.Person .up.|> java.lang.Cloneable
  com.company.data.person.Person .up.|> java.lang.Comparable
  com.company.data.person.Person o-- com.company.data.person.PersonAddress : addressInfo
  com.company.data.person.Person o-- com.company.data.person.PersonName : name
  com.company.data.person.PersonAddress .up.|> java.lang.Comparable
  com.company.data.person.PersonName .up.|> java.lang.Comparable
  com.company.data.person.Student -up-|> com.company.data.person.Person


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
